Update and rename Assignment 1.ipynb to Sample Statistics Analysis.ipynb

--- a/Sample Statistics Analysis.ipynb
+++ b/Sample Statistics Analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "0627cf17-c1d7-4880-9812-e4a7f3ef8bdc",
    "metadata": {},
    "source": [
-    "# Assignment 1"
+    "# Sample Statistics Analysis"
    ]
   },
   {
