Fixed Title in Notebook

--- a/Simple Linear, Multiple Linear, and Cubic Regression Models.ipynb
+++ b/Simple Linear, Multiple Linear, and Cubic Regression Models.ipynb
@@ -5,7 +5,7 @@
    "id": "22cab6d5-b37c-4eec-990c-97ac97c1ad8f",
    "metadata": {},
    "source": [
-    "# Assignment 1"
+    "# Simple Linear, Multiple Linear, and Cubic Regression Models"
    ]
   },
   {
