Fixed Title in Notebook

--- a/ggplot Practice and Implementation.ipynb
+++ b/ggplot Practice and Implementation.ipynb
@@ -5,7 +5,7 @@
    "id": "957f8bdb-5112-4a8e-8dda-9f620bf91b92",
    "metadata": {},
    "source": [
-    "# Assignment 3"
+    "# ggplot Practice and Implementation"
    ]
   },
   {
