Fixed Title in Notebook

--- a/KNN and Hypercubes.ipynb
+++ b/KNN and Hypercubes.ipynb
@@ -5,7 +5,7 @@
    "id": "24e85b9d-2d5d-40f3-8492-5320a03ecf0a",
    "metadata": {},
    "source": [
-    "# Assignment 4"
+    "# KNN and Hypercubes"
    ]
   },
   {
