Fixed Title in Notebook

--- a/Logistic Regression, Linear Discriminant Analysis, and Quadratic Discriminant Analysis.ipynb
+++ b/Logistic Regression, Linear Discriminant Analysis, and Quadratic Discriminant Analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "a39183f6-6cfa-4af0-aa1f-5136e003e639",
    "metadata": {},
    "source": [
-    "# Assignment 5"
+    "# Logistic Regression, Linear Discriminant Analysis, and Quadratic Discriminant Analysis"
    ]
   },
   {
