Fixed Title in Notebook

--- a/Porsche Taycan Multiple Regression Models.ipynb
+++ b/Porsche Taycan Multiple Regression Models.ipynb
@@ -5,7 +5,7 @@
    "id": "989cc3ba-1298-41cd-9383-5174696bc321",
    "metadata": {},
    "source": [
-    "# Short Project 2: Porsche Taycan Multiple Regression Models"
+    "# Porsche Taycan Multiple Regression Models"
    ]
   },
   {
