Fixed Title in Notebook

--- a/Porsche Taycan Simple Linear Regression.ipynb
+++ b/Porsche Taycan Simple Linear Regression.ipynb
@@ -5,7 +5,7 @@
    "id": "52c2fe0d-3dba-469e-8a8b-8d5e73d5fcc1",
    "metadata": {},
    "source": [
-    "# Short Project 1: Porsche Taycan"
+    "# Porsche Taycan Simple Linear Regression"
    ]
   },
   {
