--- a/Seattle Biking PCA.ipynb
+++ b/Seattle Biking PCA.ipynb
@@ -5,7 +5,7 @@
    "id": "0bb37a15-6faa-45cd-b901-e9341557af15",
    "metadata": {},
    "source": [
-    "# Project 4: Seattle Bicycling"
+    "# Seattle Biking PCA"
    ]
   },
   {
