--- a/Quiz 1.ipynb
+++ b/Quiz 1.ipynb
@@ -5,7 +5,7 @@
    "id": "b6ca3320-363f-40b7-bbd4-a7d20867c18d",
    "metadata": {},
    "source": [
-    "# Quiz 1"
+    "# Regression in Mountain Peaks"
    ]
   },
   {
